tests/pos/call.stk
fun foo = 10 p

fun bar = foo

bar
