tests/neg/namespace-redefintion2/main.stk
namespace test

fun main =
  test.lib.double 10 p
